unpackaged/main/default/objects/ebcm__Log__c/ebcm__Log__c.object-meta.xml
<CustomObject>
    <description>Logs all the exceptions.</description>
    <label>Log</label>
    <nameField>
        <label>Einstein Bot Debug Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>