unpackaged/main/default/objects/ebcm__Log__c/fields/ebcm__UserInfo__c.field-meta.xml
<CustomField>
    <fullName>ebcm__UserInfo__c</fullName>
    <label>UserInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>