unpackaged/main/default/objects/ebcm__Log__c/listViews/ebcm__All.listView-meta.xml
<ListView>
    <fullName>ebcm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>